FilesystemTransport - support unmappable characters